# deep-music

./: .dockerignore  .gitignore  Makefile.py  README.md  pyproject.toml  tox.ini
audio/: __init__.py  audio.py
audiolib/: audio.py  nsynth.py  spectrogram.py
data/raw/: urls.tsv
docker/decompress/: Dockerfile  docker-build.zsh  entrypoint.sh
docker/download/: Dockerfile  docker-build.zsh  entrypoint.sh
docker/serving/: Dockerfile  docker-build.zsh
docker/trainer/: Dockerfile  docker-build.zsh  docker-run.zsh
notebooks/: 1. spectrogram_analysis.ipynb  2. data_labeling.ipynb  3. data_extraction.ipynb  3. model_scoring.ipynb  3. preprocessing.ipynb  4. modelling.ipynb  5. model_scoring.ipynb  audio.py  audiofile.py  data_cleaning.ipynb  fft.py  mel.py  spectrogram_analysis.ipynb  spectrogram_convolution.ipynb
notebooks/experiments/: PyTorch vs Librosa.ipynb  cqt speed.ipynb
shell/: shell_requirements.txt
shell/preprocessing/: 1. package-local.zsh  configs.json  run.zsh  run_list.json
shell/trainer/: 1. package-local.zsh  2. docker-local.zsh  3. docker-local-gs.zsh  4. docker-gcloud.zsh  config.yaml
src/audiolib/: README.html  README.ipynb  README.md  README.rst  conf.py  index.rst  pyproject.toml
src/audiolib/audiolib/: __init__.py  audio.py  nsynth.py  spectrogram.py
src/audiolib/audiolib/samples/: __init__.py
src/audiolib/docs/source/: conf.py  index.rst
src/audiolib/docs/source/_static/: args.js  custom.css
src/decompress/: decompress.py  pyproject.toml  requirements.txt
src/decompress/decompress/: task.py  untar.py
src/decompress/shell/: 2. docker-local.zsh  3. gcloud-run.zsh
src/download/: Makefile.py  README.md  download_local.sh  gsutil_copy.sh  startup-script.sh
src/download/decompress/: main.py
src/download/docker/: Dockerfile  docker-build.zsh  entrypoint.sh
src/download/download/: download_local.sh  gsutil_copy.sh
src/download/shell/: 2. docker-local.zsh  3. gcloud-run.zsh  download_local.zsh  storage-transfer.zsh
src/evaluate/: Makefile.py  pyproject.toml
src/evaluate/notebooks/: model_scoring.ipynb
src/preprocess/: preprocess_main.py  pyproject.toml  requirements.txt  setup.py
src/preprocess/preprocess/: pipeline.py  preprocess.py  task.py
src/preprocess/shell/: 1. package-local.zsh  3. package-dataflow.zsh  configs.json
src/preprocessing/: Makefile.py  README.md  preprocessing_main.py  pyproject.toml  requirements.txt  setup.py
src/preprocessing/data/interim/filters/train/: brass_electronic-filter.csv  string_electronic-filter.csv
src/preprocessing/notebooks/: 2. data_labeling.ipynb
src/preprocessing/preprocessing/: batch.py  filters.py  pickle.py  preprocess.py  preprocess_dataset.py  task.py
src/preprocessing/shell/: 1. package-local.zsh  3. package-dataflow.zsh  upload_filters.zsh
src/preprocessing/tests/: test_pickle.py  test_preprocess.py  test_task.py
src/serving/: pyproject.toml  requirements.txt
src/serving/docker/: Dockerfile  docker-build.zsh
src/serving/scripts/: 1. package-local.zsh  2. docker-local.zsh
src/serving/serving/: app.py  model.py
src/serving/shell/: 2. docker-local.zsh
src/trainer/: .dockerignore  Makefile.py  README.md  gcp-training.ipynb  pyproject.toml  requirements.txt  tox.ini
src/trainer/config/: hparams.yaml  train_configs.json
src/trainer/docker/: Dockerfile  docker-build.zsh
src/trainer/preprocessing/: preprocess.py  preprocess_dataset.py
src/trainer/shell/: 1. package-local.zsh  2. docker-local.zsh  3. docker-local-gs.zsh  3. gcloud-submit.zsh  4. docker-gcloud.zsh  configs.json  data_configs.json  train_configs.json
src/trainer/tests/: test_callbacks.py  test_dataset.py
src/trainer/trainer/: __main__.py  callbacks.py  dataset.py  gsutil.py  model.py  task.py  train.py  trainer.py
