[tool.poetry]
name = "deep-music"
version = "0.1.0"
description = "Instrument recognition algorithm"
authors = ["Julian Ferry <julianferry94@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.7"
jupyter = { version = "^1.0.0",  optional = true }
audiolib = { path = "./src/audiolib" }
trainer = { path = "./src/trainer" }

[tool.poetry.extras]
eda = ["jupyter"]


[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"


[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
