[tool.poetry]
name = "audiolib"
version = "0.1.0"
description = ""
authors = ["Julian Ferry <julianferry94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
numba = "0.48.0"
librosa = "^0.7.2"
matplotlib = "^3.2.1"
IPython = "^7.15.0"
sphinx = "^3.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"


[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
