[tool.poetry]
name = "decompress"
version = "0.1.0"
description = "Cloud tar decompression script"
authors = ["Julian Ferry <julianferry94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
google-cloud-storage = "^1.30.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
