[tool.poetry]
name = "trainer"
version = "0.1.0"
description = "Training package for deep-music model"
authors = ["julianferry <julianferry94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.5.0"
torchvision = "0.6.0"
tensorboardx = "^2.0"
google-cloud-storage = "^1.29.0"
numba = "0.48.0"
audiolib = { git = "https://github.com/JulianFerry/audiolib", tag="0.1.0" }

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
